--- a/Study/Analysis/index.html
+++ b/Study/Analysis/index.html
@@ -149,6 +149,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 </header>
 
+<div class="cell" data-layout-align="center" data-hash="index_cache/html/unnamed-chunk-1_cf45776a005f118082d323c9f86fd22d">
+
+</div>
 <div class="cell" data-layout-align="center" data-hash="index_cache/html/Code-to-load-data-and-libraries_d4033ba30588e0897d19923a4badd205">
 <details>
 <summary>Code to load data and libraries</summary>
@@ -9636,6 +9639,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 </div>
 </div>
+</div>
+<div class="cell" data-layout-align="center" data-engine.opts="-l" data-hash="index_cache/html/unnamed-chunk-7_6dccc04556343feb439381448515b11a">
+
 </div>
 </section>
 
